cabal-version:      2.4
name:               yasmp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ThisKappaIsGrey
maintainer:         thanatechaumnuaiwit@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org
library
    hs-source-dirs: src, src/*
    default-language: Haskell2010
    default-extensions: OverloadedStrings
                    , DeriveGeneric
                    , GADTs
                    , FlexibleContexts
                    , FlexibleInstances
                    , TypeFamilies
                    , TypeApplications
                    , DeriveAnyClass
                    , StandaloneDeriving
                    , TypeSynonymInstances
                    , MultiParamTypeClasses
    build-depends:    base ^>=4.14.1.0
                    , aeson
                    , wai
                    , warp
                    , wai-extra
                    , wai-conduit
                    , text
                    , http-types
                    , scotty
                    , sqlite-simple
                    , beam-core
                    , beam-sqlite
                    , beam-migrate
                    , time
                    , lucid
    exposed-modules: Lib
                   , DB
                   , Pages
                   , Models.User
                   , Models.Event
                   , Models.Tag
                   , Actions.User
                   , Actions.Event
                   , Actions.Tag

executable yasmp
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.14.1.0
                    , yasmp
                    , scotty
                    , sqlite-simple
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite yasmp-test
    type:       exitcode-stdio-1.0
    main-is:    Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    other-extensions: OverloadedStrings
    build-depends: yasmp
                   , base
                   , aeson
                   , hspec
                   , hspec-contrib
                   , hspec-wai
                   , QuickCheck
                   , quickcheck-instances
                   , wai
                   , scotty
                   , sqlite-simple
                   , beam-core
                   , beam-sqlite
                   , text
    -- This won't work nicely with nix unfortunately
    -- build-tool-depends: hspec-discover:hspec-discover
